# stdiobus-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
stdiobus/: __init__.py  _resolve_binary.py  client.py  errors.py  py.typed  types.py
stdiobus/_native/: __init__.py  build_ffi.py  cdefs.h
stdiobus/backends/: __init__.py  base.py  docker.py  native.py  subprocess.py
stdiobus/native/: __init__.py  build_ffi.py  cdefs.h
tests/: __init__.py  real_e2e_test.py  real_echo_worker.py  stream_echo_worker.py  test_basic.py  test_builder.py  test_client_unit.py  test_contract.py  test_docker_backend.py  test_e2e_subprocess.py  test_errors_full.py  test_foundation_unit.py  test_manual.py  test_native_backend.py  test_native_options.py  test_native_threading.py  test_notification_subscription_unit.py  test_readme_examples.py  test_real_e2e.py  test_streaming_errors_unit.py  test_streaming_unit.py  test_subprocess_backend.py  test_types_full.py
